--- a/app.json
+++ b/app.json
@@ -10,7 +10,9 @@
     "pages/login/login",
     "pages/goods/goods",
     "pages/publish/publish",
-    "pages/telephone/telephone"
+    "pages/telephone/telephone",
+    "pages/auth/auth",
+    "pages/homeModel/home"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ddd",
