--- a/project.config.json
+++ b/project.config.json
@@ -197,6 +197,21 @@
 					"id": -1,
 					"name": "pages/telephone/telephone",
 					"pathName": "pages/telephone/telephone",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/auth/auth",
+					"pathName": "pages/auth/auth",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/progress/progress",
+					"pathName": "pages/progress/progress",
+					"query": "",
 					"scene": null
 				}
 			]
