--- a/project.config.json
+++ b/project.config.json
@@ -213,6 +213,19 @@
 					"pathName": "pages/progress/progress",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/detail/detail",
+					"pathName": "pages/deposit/deposit",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/deposit/deposit",
+					"pathName": "pages/deposit/deposit",
+					"scene": null
 				}
 			]
 		}
